correction - FM index from subsection to section

--- a/documentation/LaTeX dokumentacija/Dokumentacija.tex
+++ b/documentation/LaTeX dokumentacija/Dokumentacija.tex
@@ -46,6 +46,9 @@
 \chapter{Pomoćni algoritmi}
 \input{./pomocniAlgoritmi.tex}
 
+\chapter{FM-indeks}
+\input{./FMindeks.tex}
+
 
 \chapter{Literatura}
 %\bibliography{literatura}
