--- a/documentation/LaTeX dokumentacija/Dokumentacija.tex
+++ b/documentation/LaTeX dokumentacija/Dokumentacija.tex
@@ -49,10 +49,12 @@
 \chapter{FM-indeks}
 \input{./FMindeks.tex}
 
+\chapter{Testiranja}
+\input{./testiranja.tex}
 
 \chapter{Literatura}
-%\bibliography{literatura}
+\bibliography{literatura}
 %\bibliographystyle{fer}
-%\bibliographystyle{unsrt}
-\bibliography{ieeetr} 
+\bibliographystyle{unsrt}
+%\bibliography{ieeetr} 
 \end{document}
