--- a/documentation/LaTeX dokumentacija/Dokumentacija.tex
+++ b/documentation/LaTeX dokumentacija/Dokumentacija.tex
@@ -1,16 +1,16 @@
 \documentclass[pdftex,12pt,a4paper]{report}
 \usepackage[utf8]{inputenc}
 \usepackage[croatian]{babel}
+
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{pgf}
 \usepackage{dsfont}
 \usepackage{subfig}
-\usepackage{caption}
+%\usepackage{caption}
 \usepackage{float}
-\usepackage{mathptmx}
-\usepackage{courier}
-\usepackage[scaled]{helvet}
+%\usepackage{mathptmx}
+%\usepackage[scaled]{helvet}
 \usepackage[square]{natbib}
 \usepackage[colorlinks=false,linkcolor=black,hidelinks=true]{hyperref}
 \usepackage{lscape}
@@ -21,6 +21,7 @@
 \usepackage{algorithmic}
 \usepackage{algorithm}
 \usepackage{listings}
+
 
 
 
