Minor documentation edit

--- a/documentation/LaTeX dokumentacija/FMindeks.tex
+++ b/documentation/LaTeX dokumentacija/FMindeks.tex
@@ -30,7 +30,7 @@ Sljedeći korak je provođenje Burrows-Wheeler transformacije nad zadanim teksto
 Na temelju dobivenog niza  stvara se OCC tablica koja je u ovoj implementaciji predstavljena wavelet stablom. Na temelju izgrađenog stabla prikazanog slikom  \ref{fmWaveletTree}, uz korištenje RRR struktura koje se stvaraju za svaki list stabla (i služe za računanje broja jedinica u dijelu niza pojedinog lista), lako se računaju  vrijednosti Occ(c,i) koje su potrebne za algoritam pretraživanja unatrag. Struktura wavelet stabla i RRR struktura su detaljnije opisane u ranijim potpoglavljima. 
 
 
-\emph{\textbf{SLIKA STABLA}}
+%\emph{\textbf{SLIKA STABLA}}
 
 \begin{figure}[H]
 \centering
